time added and weaherAPI reformated

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             </section>
 
             <section class="present-forecast">
+                <li id="nameNDtime">
+
+                </li>
+
                 <li id="temp">
 
                 </li>
