all creiteria for api display met

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 
                 </li>
 
-                <li id="temp">
+                <li id="mainTemp">
 
                 </li>
-                <li id="wind">
-
-                </li>
-
-                <li id="humidity">
+                <li id="mainWind">
 
                 </li>
 
-                <li id="uvIndex">
+                <li id="mainHumidity">
+
+                </li>
+
+                <li id="mainUvIndex">
 
                 </li>
             </section>
@@ -54,9 +54,26 @@
 
         <article class="forecast">
             <h2>5-Day forecast:</h2>
-            <section id="day1" class="next-forecast">
+            <section id="day0" class="next-forecast">
                 <ul>
 
+                    <li id="temp0">
+
+                    </li>
+                    <li id="wind0">
+
+                    </li>
+
+                    <li id="humidity0">
+
+                    </li>
+
+
+
+                </ul>
+            </section>
+            <section id="day1" class="next-forecast">
+                <ul>
                     <li id="temp1">
 
                     </li>
@@ -68,12 +85,12 @@
 
                     </li>
 
-
-
                 </ul>
             </section>
+
             <section id="day2" class="next-forecast">
                 <ul>
+
                     <li id="temp2">
 
                     </li>
@@ -84,13 +101,12 @@
                     <li id="humidity2">
 
                     </li>
-
                 </ul>
+
             </section>
 
             <section id="day3" class="next-forecast">
                 <ul>
-
                     <li id="temp3">
 
                     </li>
@@ -102,7 +118,6 @@
 
                     </li>
                 </ul>
-
             </section>
 
             <section id="day4" class="next-forecast">
@@ -115,21 +130,6 @@
                     </li>
 
                     <li id="humidity4">
-
-                    </li>
-                </ul>
-            </section>
-
-            <section id="day5" class="next-forecast">
-                <ul>
-                    <li id="temp5">
-
-                    </li>
-                    <li id="wind5">
-
-                    </li>
-
-                    <li id="humidity5">
 
                     </li>
                 </ul>
