--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
                     </button>
                     <input type="button" value="clear" id="clearBtn">
                     <ul class="mainUl">
-                        <div>
+                        <li>
                             <i class="fa-solid fa-wind"></i>
-                            <li id="mainWind"></li>
-                        </div>
-                        <div>
+                            <div id="mainWind"></div>
+                        </li>
+                        <li class="mainLi">
                             <i class="fa-solid fa-droplet"></i>
-                            <li id="mainHumidity"></li>
-                        </div>
+                            <div id="mainHumidity"></div>
+                        </li>
 
-                        <div>
-                            <li id="mainUvIndex"></li>
-                        </div>
+                        <li>
+                            <div id="mainUvIndex"></div>
+                        </li>
                     </ul>
                 </nav>
             </section>
